npc spells done

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -207,6 +207,13 @@ input:checked + .sheet-slider:before {
 .sheet-toggle input[type='radio']:checked + span {
   color: #FCD116; }
 
+.sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice'], .sheet-npc .sheet-body div.sheet-spells span[name="attr_dice"] {
+  vertical-align: middle; }
+  .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:before, .sheet-npc .sheet-body div.sheet-spells span[name="attr_dice"]:before {
+    content: '('; }
+  .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:after, .sheet-npc .sheet-body div.sheet-spells span[name="attr_dice"]:after {
+    content: ')'; }
+
 /******************************************************************************/
 /********************************* VARIABLES *********************************/
 /****************************************************************************/
@@ -1748,7 +1755,7 @@ input.sheet-skill-select {
     grid-template-columns: 52% 30% 1fr;
     width: 100%;
     /*:+:+:+: TEXT AREAS :+:+:+:*/
-    /*:+:+:+: SKILLS :+:+:+:*/
+    /*:+:+:+: REPEATING SECTIONS :+:+:+:*/
     /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
     /*:+:+:+: WEAPONS :+:+:+:*/ }
     .sheet-npc .sheet-body .sheet-column {
@@ -1798,7 +1805,8 @@ input.sheet-skill-select {
       .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag'] {
         position: absolute;
         opacity: 0;
-        z-index: 2; }
+        z-index: 2;
+        top: 5%; }
         .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag'] + span {
           opacity: 0; }
         .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag']:checked + span {
@@ -1811,6 +1819,11 @@ input.sheet-skill-select {
         opacity: 1; }
       .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings {
         min-width: 700px; }
+      .sheet-npc .sheet-body div.sheet-repeating div.sheet-settings select, .sheet-npc .sheet-body div.sheet-repeating div.sheet-settings label, .sheet-npc .sheet-body div.sheet-repeating div.sheet-settings span {
+        grid-row: 2; }
+      .sheet-npc .sheet-body div.sheet-repeating div.sheet-settings label[data-i18n-title='notes'] {
+        grid-row: 3;
+        text-align: left; }
     .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem div.sheet-settings {
       grid-template-columns: 2fr 8em 8em 1fr 1fr;
       grid-column-gap: 1%; }
@@ -1834,16 +1847,13 @@ input.sheet-skill-select {
     .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings {
       grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
       grid-column-gap: 0.2%; }
-      .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings select, .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings label, .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings span {
-        grid-row: 2; }
       .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings label[data-i18n-title='notes'] {
-        grid-area: 3 / 1 / 3 / 12; }
-    .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice'] {
-      vertical-align: middle; }
-      .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:before {
-        content: '('; }
-      .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:after {
-        content: ')'; }
+        grid-column: 1 / 12; }
+    .sheet-npc .sheet-body div.sheet-spells div.sheet-settings {
+      grid-column-gap: 0.2%;
+      grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em; }
+    .sheet-npc .sheet-body div.sheet-spells label[data-i18n-title='notes'] {
+      grid-column: 1 / 9; }
   .sheet-npc .sheet-repeating h3 {
     font-variant: small-caps;
     text-align: center;
