--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -88,6 +88,13 @@
      }
  } 
 
+
+%parantheseNumbers {
+	vertical-align: middle;
+
+	&:before { content: '('; }
+	&:after { content: ')'; }
+}
 /******************************************************************************/
 /********************************* VARIABLES *********************************/
 /****************************************************************************/
@@ -374,7 +381,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			}
 		}
 
-		/*:+:+:+: SKILLS :+:+:+:*/
+		/*:+:+:+: REPEATING SECTIONS :+:+:+:*/
 		div.sheet-repeating {
 			grid-column: 1 / 4;
 
@@ -391,6 +398,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				position: absolute;
 				opacity: 0;
 				z-index: 2;
+				top: 5%;
 
 				& + span { opacity: 0; }
 				&:checked + span {
@@ -408,6 +416,15 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				&:hover > input[name='attr_flag'] + span { opacity: 1; }
 
 				div.sheet-settings { min-width: 700px; }
+			}
+
+
+			div.sheet-settings {
+				select, label, span { grid-row: 2; }
+				label[data-i18n-title='notes'] { 
+					grid-row: 3; 
+					text-align: left;
+				}
 			}
 		}
 
@@ -452,17 +469,25 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
 				grid-column-gap: 0.2%;
 
-				select, label, span { grid-row: 2; }
-				label[data-i18n-title='notes'] { grid-area: 3 / 1 / 3 / 12; }
+				label[data-i18n-title='notes'] { grid-column: 1 / 12; }
 			}
 
 			span[name='attr_weapon_dice'] {
-				vertical-align: middle;
+				@extend %parantheseNumbers;
+			}
+		}
 
-				&:before { content: '('; }
-				&:after { content: ')'; }
+		div.sheet-spells {
+			div.sheet-settings {
+				grid-column-gap: 0.2%;
+				grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em;
 			}
 
+			span[name="attr_dice"] {
+				@extend %parantheseNumbers;
+			}
+
+			label[data-i18n-title='notes'] { grid-column: 1 / 9; }
 		}
 	}
 
@@ -475,7 +500,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 	}
 } 
-
 
 /********************************************************************************************************/
 /********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
