--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -123,6 +123,20 @@ div.sheet-d6{
 
 /* ------- Buttons ---------- */
 
+button[type="roll"].sheet-d6:before{
+  font-family: 'dicefontd6';
+  content: 'f';
+}
+
+button[type="roll"].sheet-d10:before{
+  font-family: 'dicefontd10';
+  content: 'j ';
+}
+
+button[type="roll"].sheet-empty:before{
+  content: ' ';
+}
+
 /*
 button[type="roll"]:not(.sheet-small){
   color: black;
@@ -173,7 +187,9 @@ button[type="roll"]:not(.sheet-small)::before{
 .sheet-spaced {
   justify-content: space-evenly;
 }
-
+.sheet-note{
+  margin-top: 5px;
+}
 
 /*  ------------ Tabs ---------- */
 
@@ -257,7 +273,7 @@ div.sheet-pg2 {
   display: grid;
   grid-gap: 1px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 70px auto;
+  grid-template-rows: 80px auto;
   grid-template-areas:"coin  companions"
                       "equip companions";
   width: 750px;
@@ -269,10 +285,10 @@ div.sheet-pg2 {
 div.sheet-pg3 {
   display: grid;
   grid-gap: 1px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 60px auto;
-  grid-template-areas:"npc-main npc-main"
-                      ".        notes   ";
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-rows: 45px auto;
+  grid-template-areas:"npc-main npc-main npc-main"
+                      "attrs    buttons  notes   ";
   width: 600px;
   height: 700px;
   position: relative;
@@ -292,13 +308,14 @@ div.sheet-name{
   grid-area: name;
 }
 div.sheet-name div{
-  margin: 0px 5px;
+  margin: 3px 5px;
 }
 div.sheet-name input{
   width: 150px;
 }
 div.sheet-name .sheet-short{
   width: 60px;
+  padding-right: 0px;
 }
 
 /* LOGO SECTION */
@@ -313,9 +330,12 @@ div.sheet-logo{
 div.sheet-attrs{
   grid-area: attrs;
 }
-div.sheet-attrs span{
+div.sheet-attrs span:not(.sheet-info){
   width: 25px;
   margin-top: 4px;
+  border-style: none none solid none;
+  margin-bottom: 4px;
+  border-width: 2px;
 }
 div.sheet-attrs input[type="number"],
 div.sheet-saving input[type="number"],
@@ -324,33 +344,36 @@ div.sheet-dungeon input[type="number"]{
   padding: 0px 0px;
   margin: 4px 4px;
 }
+div.sheet-attrs span.sheet-note{
+  width: 100px;
+}
 
-/* HP AC SECTION */
+/*       HP AC SECTION            */
 div.sheet-hp-ac{
   grid-area: hp-ac;
 }
 div.sheet-hp-ac div.sheet-hp{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/hp.png); 
-  background-size: 240px 120px;
+  background-size: 220px 110px;
   background-repeat: no-repeat;
-  width: 250px;
-  height: 120px;
+  width: 220px;
+  height: 110px;
 }
 div.sheet-hp-ac div.sheet-to-hit{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/to-hit.png); 
-  background-size: 105px 120px;
+  background-size: 100px 110px;
   background-repeat: no-repeat;
-  width: 105px;
-  height:120px;
+  width: 100px;
+  height:110px;
 }
 div.sheet-hp-ac div.sheet-ac{
   background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/ambition_avarice/Ambition_Avarice/images/ac.png); 
-  background-size: 105px 120px;
+  background-size: 100px 110px;
   background-repeat: no-repeat;
-  width: 105px;
-  height: 120px;
+  width: 100px;
+  height: 110px;
 }
-div.sheet-hp-ac div.sheet-spaced,
+
 div.sheet-hp-ac div.sheet-infra{
   margin-top: 30px;
 }
@@ -361,7 +384,28 @@ div.sheet-hp-ac div.sheet-spaced label{
 div.sheet-hp-ac div.sheet-die input[type="text"]{
   width: 40px;
 }
+div.sheet-hp-ac div.sheet-to-hit label.sheet-title{
+  width: 110px;
+  padding-right: 0px;
+}
+div.sheet-hp-ac div.sheet-ac label.sheet-title{
+  width: 100px;
+  padding-right: 0px;
+}
+/* hp-ac buttons */
+div.sheet-hp-ac .sheet-buttons label{
+  text-align: center;
+}
+div.sheet-hp-ac .sheet-buttons input[type="number"]{
+  width: 30px;
+}
+div.sheet-hp-ac .sheet-buttons button{
+  margin-top: 4px;
+}
 
+
+
+/* saving throws */
 div.sheet-saving{
   grid-area: saving;
 }
@@ -460,6 +504,7 @@ div.sheet-coin{
 }
 div.sheet-coin label{
   text-align: center;
+  margin: 1px;
 }
 
 div.sheet-equip{
@@ -469,12 +514,26 @@ div.sheet-equip{
 div.sheet-companions{
   grid-area: companions;
 }
+div.sheet-companions input{
+  margin-bottom: 4px;
+}
 
 
 /* ------- page 3 NPC ------------ */
 
 div.sheet-npc-main{
   grid-area: npc-main;
+}
+div.sheet-npc-main label{
+  text-align: center;
+}
+
+div.sheet-buttons{
+  grid-area: buttons;
+  padding-top: 10px;
+}
+div.sheet-buttons button{
+  padding-top: 5px;
 }
 
 div.sheet-notes{
