Ambitions & Avarice: v.0.9 button adjustments, minor fixes

--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -287,8 +287,8 @@ div.sheet-pg3 {
   grid-gap: 1px;
   grid-template-columns: 2fr 1fr 2fr;
   grid-template-rows: 45px auto;
-  grid-template-areas:"npc-main npc-main npc-main"
-                      "attrs    buttons  notes   ";
+  grid-template-areas:"npc-main  npc-main    npc-main"
+                      "npc-attrs npc-buttons notes   ";
   width: 600px;
   height: 700px;
   position: relative;
@@ -330,7 +330,8 @@ div.sheet-logo{
 div.sheet-attrs{
   grid-area: attrs;
 }
-div.sheet-attrs span:not(.sheet-info){
+div.sheet-attrs span:not(.sheet-info),
+div.sheet-npc-attrs span:not(.sheet-info){
   width: 25px;
   margin-top: 4px;
   border-style: none none solid none;
@@ -338,6 +339,7 @@ div.sheet-attrs span:not(.sheet-info){
   border-width: 2px;
 }
 div.sheet-attrs input[type="number"],
+div.sheet-npc-attrs input[type="number"],
 div.sheet-saving input[type="number"],
 div.sheet-dungeon input[type="number"]{
   width:30px;
@@ -375,7 +377,7 @@ div.sheet-hp-ac div.sheet-ac{
 }
 
 div.sheet-hp-ac div.sheet-infra{
-  margin-top: 30px;
+  margin-top: 15px;
 }
 div.sheet-hp-ac div.sheet-spaced label{
   width: 65px;
@@ -399,7 +401,7 @@ div.sheet-hp-ac .sheet-buttons label{
 div.sheet-hp-ac .sheet-buttons input[type="number"]{
   width: 30px;
 }
-div.sheet-hp-ac .sheet-buttons button{
+div.sheet-hp-ac .sheet-npc-buttons button[type="roll"]{
   margin-top: 4px;
 }
 
@@ -528,12 +530,12 @@ div.sheet-npc-main label{
   text-align: center;
 }
 
-div.sheet-buttons{
-  grid-area: buttons;
-  padding-top: 10px;
+div.sheet-npc-buttons{
+  grid-area: npc-buttons;
+  margin-top: 10px;
 }
-div.sheet-buttons button{
-  padding-top: 5px;
+div.sheet-npc-buttons button[type="roll"]{
+  margin-top: 5px;
 }
 
 div.sheet-notes{
