--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -242,7 +242,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		background-color: #555;
 	}
 
-	.sheet-tabs {
+	div.sheet-tabs {
 		@extend %display-inline-grid;
 		grid-template-columns: 2.5em 1fr 4em 1fr 4em 1fr 4em 1fr 4em;
 		grid-row-gap: 10%;
@@ -278,8 +278,31 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 	}
 
+	div.sheet-rows {
+		margin-bottom: 1%;
+		width: 100%;
+
+		button {
+			font-size: 1.1em;
+			text-align: left;
+		}
+
+		h2 { 
+			display: inline;
+			font-size: 1.1em;
+			line-height: unset;
+			font-weight: normal; 
+		}
+
+		h3 { display: inline; }
+
+		input[type='number'] { width: 3em; }
+
+		span.sheet-tiny-span { margin: 0px 1%; }
+	}
+
 	/*:+:+:+: NPC ATTRIBUTES :+:+:+:*/
-	.sheet-attribute {
+	div.sheet-attribute {
 		border-bottom: 1px solid #fff;
 		border-top   : 1px solid #fff;
 		margin       : 2% 0px 1% 0px;
@@ -321,46 +344,28 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 	}
 
 	/*:+:+:+: NPC BODY :+:+:+:*/
-	.sheet-body {
+	div.sheet-mid {
 		@extend %display-inline-grid;
 		grid-template-columns: 52% 30% 1fr;
 		width: 100%;
 
-		.sheet-column {
+		div.sheet-column {
 			@extend %display-inline-block;
 			width: 100%;
-		}
-
-		.sheet-rows {
-			margin-bottom: 1%;
-			width: 100%;
-
-			button {
-				font-size: 1.1em;
-				text-align: left;
-			}
-
-			h2 { 
-				display: inline;
-				font-size: 1.1em;
-				line-height: unset;
-				font-weight: normal; 
-			}
-
-			h3 { display: inline; }
-
-			input[type='number'] { width: 3em; }
-
-			span.sheet-tiny-span { margin: 0px 1%; }
 		}
 
 		span[name='attr_physical_limit']:after,
 		span[name='attr_mental_limit']:after {
 			content: ',';
 		}
+	}
+
+	/*:+:+:+: NPC TEXT BOXES AND REPEATING SECTIONS :+:+:+:*/
+	div.sheet-end {
+		div.sheet-rows, div.sheet-textrow { width: 100% }
 
 		/*:+:+:+: TEXT AREAS :+:+:+:*/
-		.sheet-textrow { 
+		div.sheet-textrow { 
 			grid-column: 1 / 4; 
 			
 			h1 {
@@ -422,18 +427,20 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			div.sheet-settings {
 				select, label, span { grid-row: 2; }
 				label[data-i18n-title='notes'] { 
-					grid-row: 3; 
-					text-align: left;
+					grid-row: 3;
+
+					input[type='text'] { text-align: left; }
 				}
 			}
 		}
 
-		 /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
-		 div.sheet-inline-repeating {
+		/*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
+		div.sheet-inline-repeating {
 			div.repitem {
 				div.sheet-settings {
 					grid-template-columns: 2fr 8em 8em 1fr 1fr;
 					grid-column-gap: 1%;
+					grid-row-gap: 0.5%;
 
 					h2.sheet-full-row {
 						grid-column: 1 / 6;
@@ -461,7 +468,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					margin-bottom : 0px;
 				}
 			}
-		 }
+		}
 
 		/*:+:+:+: WEAPONS :+:+:+:*/
 		div.sheet-weapons {
@@ -472,33 +479,116 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				label[data-i18n-title='notes'] { grid-column: 1 / 12; }
 			}
 
-			span[name='attr_weapon_dice'] {
-				@extend %parantheseNumbers;
-			}
+			span[name='attr_weapon_dice'] { @extend %parantheseNumbers; }
 		}
 
+		/*:+:+:+: SPELLS :+:+:+:*/
 		div.sheet-spells {
 			div.sheet-settings {
 				grid-column-gap: 0.2%;
 				grid-template-columns: 7em 3em 1fr 5em 5em 5em 3em 5em 3em;
 			}
 
-			span[name="attr_dice"] {
-				@extend %parantheseNumbers;
+			span[name="attr_dice"] { @extend %parantheseNumbers; }
+
+			label[data-i18n-title='notes'] { grid-column: 1 / 10; }
+		}
+
+		/*:+:+:+: COMPLEX FORMS :+:+:+:*/
+		div.sheet-forms {
+			div.sheet-settings {
+				grid-column-gap: 0.2%;
+				grid-template-columns: 3em 1fr 7em 8em 3em;
 			}
 
-			label[data-i18n-title='notes'] { grid-column: 1 / 9; }
+			span[name="attr_software_dice"] { @extend %parantheseNumbers; }
+			label[data-i18n-title='notes'] { grid-column: 1 / 6; }
+		}
+
+		/*:+:+:+: IC :+:+:+:*/
+		div.sheet-ic {
+			div.sheet-settings {
+				grid-column-gap: 0.2%;
+				grid-template-columns: 1fr 8em 8em 8em;
+			}
+
+			span[name="attr_software_dice"] { @extend %parantheseNumbers; }
+			label[data-i18n-title='notes'] { grid-column: 1 / 6; }
 		}
 	}
 
-	/*:+:+:+: NPC BODY :+:+:+:*/
-	.sheet-repeating {
-		h3 { 
-			font-variant: small-caps;
-			text-align  : center;
-			text-decoration: underline; 
+	/*:+:+:+: NPC MATRIX :+:+:+:*/
+	div.sheet-matrix-device {
+		margin-bottom: 5%;
+
+		div.sheet-rows {
+			display: inline-grid;
+			grid-template-columns: 12em 45% 10em 1fr;
+			grid-row-gap: 5%;
+
+			&:first-child { margin-bottom: 5%; }
+		}
+
+		button {
+	     	&[name*='Attack']:hover { color: #cc0701; }
+	     	&[name*='Sleaze']:hover { color: #007bfc; }
+	     	&[name*='Data']:hover { color: #88dd04; }
+	     	&[name*='Firewall']:hover { color: #f88703; }
+	     }
+
+	    input[type='radio'] { 
+	     	position: relative;
+	     	opacity: 0;
+	     	z-index: 2;
+
+	     	& + span { position: relative; }
+	     }
+
+		label {
+			width: 100%;
+
+			input[type='text'] {
+				text-align: left;
+				width: 100%;
+			}
+
+			&.sheet-round > input[type='number'] {
+				border-radius: 25px 25px;
+				height: 25px;
+				margin-left: 25%;
+				width: 25px;
+			}
+		}
+
+		div.sheet-matrix-bubble { grid-column: 2 / 4; }
+	}
+
+	div.sheet-matrix {
+      width: 100%;
+
+     /*:+:+:+: NPC MATRIX BUBBLES :+:+:+:*/
+	div.sheet-matrix-bubble {
+		background-color: transparent;
+
+		input[type='radio'] {
+		height: 25px;
+		width : 20px;
+		left  : 0px;
+
+			& + span {
+			border-radius: 5px;
+			height       : 25px;
+			left         : 5px;
+			width        : 20px;
+			}
 		}
 	}
+
+      .sheet-matrixAttack { box-shadow: 0px 0px 29px 8px  #cc0701; }
+      .sheet-matrixSleaze { box-shadow: 0px 0px 29px 8px  #007bfc; }
+      .sheet-matrixData { box-shadow: 0px 0px 29px 8px  #88dd04; }
+      .sheet-matrixFirewall { box-shadow: 0px 0px 29px 8px  #f88703; }
+    }
 } 
 
 /********************************************************************************************************/
