--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -154,6 +154,20 @@
 		@extend %display-none;
 	}
 
+	//- NPC SPELLS HIDE COMBAT INFO IF NOT A COMBAT SPELL
+	input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='combat'],
+	input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'],
+	input[name='attr_category']:not([value='Combat']) ~ select[name='attr_combat_type'],
+	input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']  {
+		@extend %display-none;
+	}
+
+
+	//- SHOW AND HIDE MATRIX DEVICE
+	input[name='attr_flag_matrix'][value='matrix'] ~ div.sheet-matrix {
+		@extend %display-inline-block;
+	}
+
 	%highlight-button {
 		background-color: #610b0d;
 		box-shadow      : inset 0px 0px 3px 1px #e31715; 
